Add coverage test